# cli-yoru

./: LICENSE  README.md  pyproject.toml
src/receipt_cli/: api.py  cli.py  config.py  doctor_cmd.py  hook_template.py  init_cmd.py  tail_cmd.py  transcript_tailer.py
src/yoru_cli/: __init__.py  api.py  cli.py  config.py  doctor_cmd.py  hook_template.py  init_cmd.py  share_cmd.py  skill_template.py  tail_cmd.py  transcript_tailer.py  update_cmd.py
tests/: test_cli.py  test_doctor.py  test_hook_template.py  test_init.py  test_init_settings_merge.py  test_tail.py  test_update.py
