[project]
name = "yoru-cli"
version = "0.1.2"
description = "Yoru — audit-grade session receipts for autonomous AI coding agents."
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Yoru authors", email = "hello@yoru.sh" }]
keywords = ["claude-code", "cursor", "aider", "ai-agents", "observability", "audit"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://yoru.sh"
Documentation = "https://yoru.sh/docs"
Repository = "https://github.com/TsukumoHQ/cli-yoru"
Issues = "https://github.com/TsukumoHQ/cli-yoru/issues"

[project.scripts]
yoru = "yoru_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoru_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
